--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,27 @@
 .App {
-  text-align: center;
+	text-align: center;
+	display: flex;
+	background: beige;
+	height: 100vh;
+	justify-content: center;
+	flex-direction: row;
+	align-items: center;
 }
 
-.App-logo {
-  height: 40vmin;
+img {
+	width: 30%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.Dog,
+.About,
+.Contact {
+	width: 1000px;
+	height: 800px;
+	background: white;
+	border: 1px solid black;
+	box-shadow: 20px 20px 0 black;
 }
 
-.App-link {
-  color: #09d3ac;
+h1 {
+	font-size: 4rem;
 }
