--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,11 @@
 	justify-content: space-around;
 }
 
+.active-link {
+	color: red;
+	border-bottom: 3px solid yellowgreen;
+}
+
 a {
 	font-size: 2rem;
 	text-decoration: none;
